[gd_scene load_steps=13 format=2]

[ext_resource path="res://shop.gd" type="Script" id=1]
[ext_resource path="res://foreground.png" type="Texture" id=2]
[ext_resource path="res://shopkeeper.png" type="Texture" id=3]
[ext_resource path="res://shop_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://corn_seedpack.tscn" type="PackedScene" id=5]
[ext_resource path="res://cabbage_seedpack.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15, 12 )

[sub_resource type="CircleShape2D" id=6]
radius = 13.0

[node name="shop" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="shopkeeper" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="shop_art" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3 )
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 10 )
shape = SubResource( 6 )

[node name="shop_menu" parent="." instance=ExtResource( 4 )]
position = Vector2( -28, -49 )

[node name="corn_seedpack" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 20, 3 )

[node name="cabbage_seedpack" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 20, 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
